Configure for polymorphic routing

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -25,5 +25,5 @@
   <%= @listing.price %>
 </p>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+<%= link_to 'Edit', [:edit, @user, @listing] %> |
+
