--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
+  <div class="field">
+    <%= f.label :listing_image %><br>
+    <%= f.file_field :listing_image %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
