--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -8,6 +8,7 @@
       <th>Description</th>
       <th>Location</th>
       <th>Price</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= listing.description %></td>
         <td><%= listing.location %></td>
         <td><%= listing.price %></td>
+        <td><%= image_tag listing.listing_image.url(:thumb) %></td>
         <td><%= link_to 'Show', listing %></td>
         <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
         <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
