--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,4 +24,4 @@
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
-<%= link_to 'Create New Listing', new_user_listing_path(@user) %>
+<%= link_to 'See Listings', user_listings_path(@user) %>
