--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 <body>
   <nav>
     <ul>
-      <li><%= link_to 'Sign up', new_user_path %></li>
-      <li><%= link_to 'Sign in', signin_path %></li>
+      <li><%= link_to 'Sign Up', new_user_path %></li>
+      <li><%= link_to 'Log In', signin_path %></li>
+      <li><%= link_to 'List Your Thing', '#' %></li>
     </ul>
   </nav>
 
