Update signin functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <ul>
       <li><%= link_to 'Sign Up', new_user_path %></li>
       <li><%= link_to 'Log In', signin_path %></li>
-      <li><%= link_to 'List Your Thing', '#' %></li>
+      <li><%= link_to 'List Your Thing', 'new_user_listing_path(@user)' %></li>
     </ul>
   </nav>
 
