Update session controller

--- a/app/views/listings/showall.html.erb
+++ b/app/views/listings/showall.html.erb
@@ -16,15 +16,13 @@
   <tbody>
     <% @listings.each do |listing| %>
       <tr>
-        <td><%= listing.title %></td>
+        <td><%= link_to listing.title, user_listing_path(listing.user_id, listing) %></td>
         <td><%= listing.host %></td>
         <td><%= listing.description %></td>
         <td><%= listing.location %></td>
         <td><%= listing.price %></td>
         <td><%= image_tag listing.listing_image.url(:thumb) %></td>
         <td><%= link_to 'Show', user_listing_path(listing.user_id, listing) %></td>
-        <!-- <td><%= link_to 'Edit', edit_user_listing_path(listing.user_id,listing) %></td>
-        <td><%= link_to 'Destroy', user_listing_path(listing.user_id,listing), method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
