--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,3 +26,35 @@
 <%= link_to 'Edit Profile', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
 <%= link_to 'See Listings', user_listings_path(@user) %>
+
+<h1><%= @user.first_name %>'s listings</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Host</th>
+      <th>Description</th>
+      <th>Location</th>
+      <th>Price</th>
+      <th>Image</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @user.listings.each do |listing| %>
+      <tr>
+        <td><%= listing.title %></td>
+        <td><%= listing.host %></td>
+        <td><%= listing.description %></td>
+        <td><%= listing.location %></td>
+        <td><%= listing.price %></td>
+        <td><%= image_tag listing.listing_image.url(:thumb) %></td>
+        <td><%= link_to 'Show', user_listing_path(@user,listing) %></td>
+        <td><%= link_to 'Edit', edit_user_listing_path(@user,listing) %></td>
+        <td><%= link_to 'Destroy', user_listing_path(@user,listing), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
